<menu xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
		android:id="@+id/refreshCostList"
		android:orderInCategory="1"
		android:title="@string/refresh"
		android:icon="@drawable/refresh_48"
		app:showAsAction="ifRoom" />

	<item
		android:id="@+id/action_exportMenu"
		android:orderInCategory="1"
		app:showAsAction="ifRoom"
		android:icon="@drawable/share_48"
		android:title="@string/export">
		<menu>
			<item
				android:id="@+id/exportToJson"
				android:orderInCategory="1"
				android:icon="@drawable/json_48"
				android:title="@string/json"
				app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
				/>
			<item
				android:id="@+id/exportToCSV"
				android:orderInCategory="1"
				android:icon="@drawable/csv_48"
				android:title="@string/csv"
				app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
		</menu>
	</item>

	<item
		android:id="@+id/action_trip_add"
		android:orderInCategory="1"
		android:icon="@drawable/trip_48"
		android:title="@string/newTrip"/>

	<item
		android:id="@+id/staff_peoples"
		android:orderInCategory="1"
		android:icon="@drawable/users_48"
		android:title="@string/usersList"/>

	<item
		android:id="@+id/staff_trips"
		android:orderInCategory="1"
		android:icon="@drawable/list_48"
		android:title="@string/tripsList"/>

	<item
		android:id="@+id/trip_summary"
		android:orderInCategory="1"
		android:icon="@drawable/summary_48"
		android:title="@string/sum_result"/>

	<item
		android:id="@+id/hide_show_helps"
		android:orderInCategory="1"
		android:icon="@drawable/hint_on"
		android:title="Подсказки"/>
	<item
		android:id="@+id/group_by_color"
		android:orderInCategory="1"
		android:icon="@drawable/hint_off"
		android:title="Группировка итогов по цветам"/>
	<item
		android:id="@+id/group_cost"
		android:orderInCategory="1"
		android:icon="@drawable/hint_off"
		android:title="Группировка трат"/>

	<item
		android:id="@+id/menu_about"
		android:orderInCategory="1"
		android:icon="@drawable/about_48"
		android:title="@string/about"/>


	<item
		android:id="@+id/test"
		android:orderInCategory="1"
		android:title="Тест. текста"
		android:visible="false"
		tools:ignore="HardcodedText" />



	<item
		android:id="@+id/testBigCostList"
		android:orderInCategory="1"
		android:title="Тест. Добавить 10000 записей"
		android:visible="false"
		tools:ignore="HardcodedText" />





</menu>