<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/Layout">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/add_costs_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:hint="@string/text"
            tools:ignore="LabelFor,TextFields" />


        <EditText
            android:id="@+id/add_cost_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:inputType="textPersonName|textCapSentences"
            android:hint="@string/Description"
            >

        </EditText>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_add_costs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:choiceMode="none"
            />

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/helpHintDeleteMember"
            android:layout_gravity="center"
            android:padding="30dp"
            android:text="@string/helpAddVoiceCostsDeleteItem"
            android:layout_marginBottom="50dp"

            style="@style/help"
            />


        <TextView
            android:id="@+id/helpHintAddCost"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="30dp"
            android:text="@string/helpAdd"
            style="@style/help"
            />

        <TextView
            android:id="@+id/helpHintCancel"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="120dp"
            android:text="@string/helpCancel"
            style="@style/help"
            />

        <TextView
            android:id="@+id/helpHintRefresh"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="210dp"
            android:text="@string/helpRefresh"
            style="@style/help"
            />



        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_costs_list_refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="160dp"
            app:srcCompat="@drawable/ic_refresh_24"
            tools:ignore="RtlHardcoded" />



        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_costs_list_revert_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="88dp"
            app:srcCompat="@drawable/ic_reply_24"
            tools:ignore="RtlHardcoded" />



        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_cost_list_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/ic_done_24"
            tools:ignore="RtlHardcoded" />


    </FrameLayout>

</RelativeLayout>
