<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Layout" >


    <include
        layout="@layout/toolbar_out_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar_out_main"
        >


        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:singleLine="true"
            android:hint="@string/Name"
            android:inputType="textPersonName|textCapWords"
            android:imeOptions="actionDone">

            <requestFocus />
        </EditText>
        <TextView
            android:id="@+id/memberNameWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/warning_member_name"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/buttonSelectColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="#000000"
            android:text="@string/Color"
            android:textColor="#ffffff"

            />

        </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/add_member_commit"
            style="@style/commitButton"
            />


        <!--
        <Button
            style="@style/cancelButton"
            android:onClick="actionviewDataOnClick"
            />
            -->

    </FrameLayout>

    
</RelativeLayout>