<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">




        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/memberCostInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/h3"/>

            <EditText
                android:id="@+id/cost_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapSentences"
                android:hint="@string/Description"
                >
                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/cost_sum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:hint="@string/Sum"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/textDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="datetime"
                android:focusable="false"
                android:hint="@string/date" />

            <TextView
                android:id="@+id/hasPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foto"
                android:visibility="invisible"
                />

            <TextView
                android:id="@+id/cost_dir_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

        </LinearLayout>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cost_info_commit_button"
            style="@style/firstFab"
            app:srcCompat="@drawable/ic_next_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonPhoto"
            style="@style/secondFab"
            app:srcCompat="@drawable/ic_camera_24" />



        <!--
        <Button
            style="@style/cancelButton"
            android:onClick="showMainPage" />
            -->

    </FrameLayout>



</RelativeLayout>