<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/Layout">


    <ListView
        android:id="@+id/list_members"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:choiceMode="multipleChoice"
        />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/helpHintCheckMember"
            android:layout_gravity="center"
            android:padding="30dp"
            android:text="@string/helpChechMembers"
            style="@style/help"
            />

        <TextView
            android:id="@+id/helpHintAddMember"
            style="@style/help"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="122dp"
            android:layout_marginEnd="35dp"
            android:text="@string/helpAddMember" />

        <TextView
            android:id="@+id/helpHintCommitMemberList"
            style="@style/help"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="35dp"
            android:text="@string/helpCommitMemberList"
            android:textSize="17sp" />



        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/member_list_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/ic_done_24"
            android:alpha="0.85"
            tools:ignore="RtlHardcoded" />



        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/member_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/ic_plus_24"
            android:alpha="0.85"
            tools:ignore="RtlHardcoded" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/member_checkAll_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="88dp"
            app:srcCompat="@drawable/ic_list_24dp"
            android:visibility="invisible"
            android:alpha="0.85"
            tools:ignore="RtlHardcoded" />





    </FrameLayout>

</RelativeLayout>
